--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,25 @@
-<!-- test ikony-->
-<svg class="logo" width="40" height="37" fill="#F8D24E">
-  <use href=".//images/icons-ice_cream.svg#icon-Logo"></use>
-</svg>
+<section class="products">
+  <a class="products_label" id="100% natural">100% natural</a>
+  <p class="products__title">products</p>
+</section>
+<div class="ice-cream">
+  <h3 class="ice-cream__title">ice cream</h3>
+  <p>Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+  <button></button>
+</div>
+<div class="ice-coffee">
+  <h3 class="ice-coffee__title">ice coffee</h3>
+  <p>
+    Fragrant invigorating drink created from 100% natural ingredients without the use of
+    preservatives and flavor enhancers
+  </p>
+  <button></button>
+</div>
+<div class="milkshakes">
+  <h3 class="milkshake__title">milkshakes</h3>
+  <p>
+    Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other
+    sweets of your choice
+  </p>
+  <button></button>
+</div>
