--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,6 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
-@import './mixins.scss';
+@import './mixins';
 @use './partials/header';
 @import './example';
