--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,4 +1,12 @@
 .products {
+  background-image: url(../images/Backgroud_mobile\ 1x.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  margin: 0 auto;
+  align-items: center;
+
   &__label {
     color: #131313;
   }
