--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -2,6 +2,11 @@ advantages-header {
   opacity: 0;
 }
 advantages-list {
+  display: flex;
+  width: 368px;
+  height: 52px;
+  flex-direction: column;
+  flex-shrink: 0;
   &_number {
     color: #fcfcfc;
     text-align: center;
