--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -39,8 +39,6 @@ advantages-header {
 
 advantages-list {
   display: flex;
-  width: 368px;
-  height: 52px;
   flex-direction: column;
   flex-shrink: 0;
 }
@@ -64,6 +62,18 @@ advantages-list_text {
   line-height: 176%;
 }
 
+@media screen and (min-width: 768px) {
+  advantages-list {
+    display: flex;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1200px) {
+  advantages-list {
+    display: flex;
+    flex-direction: row;
+  }
+}
 /*
  * Główny plik dla stylów.
  * Wszystkie partials podłączamy tutaj.
