--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,7 +3,7 @@
   <ul class="advantages-list">
     <li class="advantages-list_element">
       <svg class="advantages-icon" width="36" height="36">
-        <use href=""></use>
+        <use href="./images/icons-ice_cream.svg#icon-cow"></use>
       </svg>
       <p class="advantages-list_number">721</p>
       <p class="advantages-list_text">
@@ -12,7 +12,7 @@
     </li>
     <li class="advantages-list_element">
       <svg class="advantages-icon" width="36" height="36">
-        <use href=""></use>
+        <use href="./images/icons-ice_cream.svg#icon-weight"></use>
       </svg>
       <p class="advantages-list_number">16kg</p>
       <p class="advantages-list_text">
@@ -21,7 +21,9 @@
     </li>
     <li class="advantages-list_element">
       <svg class="advantages-icon" width="36" height="36">
-        <use href="">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</use>
+        <use href="./images/icons-ice_cream.svg#icon-ice-crema">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </use>
       </svg>
       <p class="advantages-list_number">84</p>
       <p class="advantages-list_text">
