--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -24,6 +24,10 @@ advantages-list {
     font-weight: 400;
     line-height: 176%;
   }
+  advantages-icon {
+    border-radius: 25px;
+    background: #f8d24e;
+  }
 }
 @media screen and (min-width: 768px) {
   advantages-list {
