--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -61,6 +61,10 @@ advantages-list_text {
   font-weight: 400;
   line-height: 176%;
 }
+advantages-list advantages-icon {
+  border-radius: 25px;
+  background: #f8d24e;
+}
 
 @media screen and (min-width: 768px) {
   advantages-list {
