--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,64 +1,1 @@
-@charset "UTF-8";
-.header {
-  background-color: #84a178;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-}
-.header__logo {
-  fill: #f8d24e;
-  width: 18.6px;
-  height: 37.1px;
-  position: relative;
-}
-.header__logo-box {
-  position: relative;
-}
-.header__logo-span {
-  position: absolute;
-  color: #f8d24e;
-  font-size: 14.874px;
-  bottom: 1px;
-  right: -11px;
-}
-.header__menu {
-  background-color: transparent;
-  border: none;
-}
-.header__icon {
-  width: 32px;
-  height: 32px;
-  fill: #ffffff;
-}
-
-/*
- * Główny plik dla stylów.
- * Wszystkie partials podłączamy tutaj.
- */
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
-}
-
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  background-image: url("../images/demo.jpg");
-  background-size: cover;
-  background-position: center;
-}/*# sourceMappingURL=main.css.map */
+.header{background-color:#84a178;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;padding-left:20px;padding-right:20px;padding-top:20px}.header__logo{fill:#f8d24e;width:18.6px;height:37.1px;position:relative}.header__logo-box{position:relative}.header__logo-span{position:absolute;color:#f8d24e;font-size:14.874px;bottom:1px;right:-11px}.header__menu{background-color:rgba(0,0,0,0);border:none}.header__icon{width:32px;height:32px;fill:#fff}.example{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;line-height:1.5;background-color:#fff;color:#424242;max-width:960px;padding:16px}.example code{font-family:monospace;font-size:16px;font-weight:700;background-color:#009688;color:#fff;padding:2px 6px;border-radius:2px}.example .background{height:240px;background-image:url("../images/demo.jpg");background-size:cover;background-position:center}/*# sourceMappingURL=main.css.map */
