--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,110 +1,1 @@
-@charset "UTF-8";
-.header {
-  background-color: #84a178;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-}
-.header__logo {
-  fill: #f8d24e;
-  width: 18.6px;
-  height: 37.1px;
-  position: relative;
-}
-.header__logo-box {
-  position: relative;
-}
-.header__logo-span {
-  position: absolute;
-  color: #f8d24e;
-  font-size: 14.874px;
-  bottom: 1px;
-  right: -11px;
-}
-.header__menu {
-  background-color: transparent;
-  border: none;
-}
-.header__icon {
-  width: 32px;
-  height: 32px;
-  fill: #ffffff;
-}
-
-advantages-header {
-  opacity: 0;
-}
-
-advantages-list {
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-}
-advantages-list_number {
-  color: #fcfcfc;
-  text-align: center;
-  font-size: 58px;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 2.32px;
-}
-advantages-list_text {
-  color: #fcfcfc;
-  text-align: center;
-  font-size: 16px;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 176%;
-}
-advantages-list advantages-icon {
-  border-radius: 25px;
-  background: #f8d24e;
-}
-
-@media screen and (min-width: 768px) {
-  advantages-list {
-    display: flex;
-    flex-direction: row;
-  }
-}
-@media screen and (min-width: 1200px) {
-  advantages-list {
-    display: flex;
-    flex-direction: row;
-  }
-}
-/*
- * Główny plik dla stylów.
- * Wszystkie partials podłączamy tutaj.
- */
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
-}
-
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
-} /*# sourceMappingURL=main.css.map */
+advantages-header{opacity:0}advantages-list{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-ms-flex-negative:0;flex-shrink:0}advantages-list_number{color:#fcfcfc;text-align:center;font-size:58px;font-family:Montserrat;font-style:normal;font-weight:700;line-height:normal;letter-spacing:2.32px}advantages-list_text{color:#fcfcfc;text-align:center;font-size:16px;font-family:Montserrat;font-style:normal;font-weight:400;line-height:176%}advantages-list advantages-icon{border-radius:25px;background:#f8d24e}@media screen and (min-width: 768px){advantages-list{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}}@media screen and (min-width: 1200px){advantages-list{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}}.header{background-color:#84a178;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;padding-left:20px;padding-right:20px;padding-top:20px}.header__logo{fill:#f8d24e;width:18.6px;height:37.1px;position:relative}.header__logo-box{position:relative}.header__logo-span{position:absolute;color:#f8d24e;font-size:14.874px;bottom:1px;right:-11px}.header__menu{background-color:rgba(0,0,0,0);border:none}.header__icon{width:32px;height:32px;fill:#fff}.products{background-image:url(../images/Backgroud_mobile\ 1x.jpg);background-position:center;background-size:cover;background-repeat:no-repeat;width:100%;margin:0 auto;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.products__label{color:#131313}.products__title{color:#131313}.ice-cream__title::before{content:url(../images/products/ice-cream_480\ 1x.jpg);width:200px;height:200px;border-radius:100px}.example{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;line-height:1.5;background-color:#fff;color:#424242;max-width:960px;padding:16px}.example code{font-family:monospace;font-size:16px;font-weight:700;background-color:#009688;color:#fff;padding:2px 6px;border-radius:2px}.example .background{height:240px;background-image:url("../images/demo.jpg");background-size:cover;background-position:center}/*# sourceMappingURL=main.css.map */
