--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,10 +5,10 @@
 
 // Style dla pliku z przykładem HTML fragmentu
 
-
 @use './partials/advantages';
 
 @import './mixins';
 @import './partials/header';
+@import './products';
 
 @import './example';
