footer/add-form

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,5 +23,11 @@
   </head>
   <body>
     <header></header>
+    <div class="top-container footer">
+      <a class="motto">
+        ><span class="motto__text">homemade ice cream made </span
+        ><span class="motto__text motto__text--white">with passion</span></a
+      >
+    </div>
   </body>
 </html>
