--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,12 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
+
+@use './partials/advantages';
+
+@import './mixins';
+@import './partials/header';
+@import './products';
+
 @import './example';
 @import './footer';
