--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -8,3 +8,18 @@
     @content;
   }
 }
+
+@mixin section-tittle($color) {
+  font-family: Seymour One;
+  font-size: 36px;
+  font-weight: 400;
+  letter-spacing: 2.16px;
+  color: $color;
+}
+
+@mixin section-subtittle($color) {
+  font-size: 30px;
+  font-family: Montserrat;
+  font-weight: 800;
+  color: $color;
+}
