--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,8 @@
 // Style dla pliku z przykładem HTML fragmentu
 
 @use './partials/advantages';
+@use './partials/main-styles';
+@use './partials/vars';
 
 @import './mixins';
 @import './partials/header';
