--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,7 +6,7 @@
     <h3 class="ice-cream__title">ice cream</h3>
     <p>Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href="../images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+      <svg width="40" height="16"><use href=""></use></svg>
     </button>
   </div>
   <div class="ice-coffee">
@@ -16,7 +16,7 @@
       preservatives and flavor enhancers
     </p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href="../images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+      <svg width="40" height="16"><use href=""></use></svg>
     </button>
   </div>
   <div class="milkshakes">
@@ -26,7 +26,7 @@
       sweets of your choice
     </p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href="../images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+      <svg width="40" height="16"><use href=""></use></svg>
     </button>
   </div>
 </section>
@@ -36,7 +36,7 @@
   <div class="modal">
     <button class="modal__close" data-modal-close>
       <svg class="close-icon" width="11.11" height="11.14">
-        <use href="images/icons.svg#icon-close-black-18dp-2-1"></use>
+        <use href=""></use>
       </svg>
     </button>
     <p class="modal-form__title">Chololate icecream</p>
@@ -56,4 +56,3 @@
     </form>
   </div>
 </div>
-<script src="./js/modal.js"></script>
