added "products" to main html and css

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,17 +1,16 @@
 <section class="products">
-  <a class="products_label" id="100% natural">100% natural</a>
-  <p class="products__title">products</p>
-
+  <p class="products__label" id="100% natural">100% natural</p>
+  <h2 class="products__title">products</h2>
   <div class="ice-cream">
-    <h3 class="ice-cream__title">ice cream</h3>
-    <p>Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+    <h3 class="products__name">ice cream</h3>
+    <p class="products__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
     <button class="products__button" type="button" data-modal-open>
       <svg width="40" height="16"><use href=""></use></svg>
     </button>
   </div>
   <div class="ice-coffee">
-    <h3 class="ice-coffee__title">ice coffee</h3>
-    <p>
+    <h3 class="products__name">ice coffee</h3>
+    <p class="products__text">
       Fragrant invigorating drink created from 100% natural ingredients without the use of
       preservatives and flavor enhancers
     </p>
@@ -20,8 +19,8 @@
     </button>
   </div>
   <div class="milkshakes">
-    <h3 class="milkshakes__title">milkshakes</h3>
-    <p>
+    <h3 class="products__name">milkshakes</h3>
+    <p class="products__text">
       Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other
       sweets of your choice
     </p>
