--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -1,6 +1,6 @@
 $green-background-color: #84a178;
 $yellow-background-color: #f8d24e;
-$white-text-color: #fcfcfc;
+$white-primary-color: #fcfcfc;
 
 .about {
   background-color: $green-background-color;
@@ -11,21 +11,32 @@ $white-text-color: #fcfcfc;
     margin: auto;
   }
   &__label {
-    color: $white-text-color;
+    color: $white-primary-color;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
   }
   &__tittle {
-    color: $white-text-color;
+    color: $white-primary-color;
     font-family: 'Seymour One', sans-serif;
     font-size: 30px;
     font-weight: 900;
-    letter-spacing: 4%;
+    letter-spacing: 0.04em;
     text-align: center;
     text-transform: uppercase;
   }
+
+  &__img-container {
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 -22px 0 5px #f8d24eb3, 0 -22px 0 5px #d9d9d9;
+    width: 85%;
+    height: 278px;
+    margin: 0 auto;
+  }
+
   &__txt-and-btn-container {
     display: flex;
     flex-direction: column;
@@ -34,16 +45,18 @@ $white-text-color: #fcfcfc;
     margin: auto;
   }
   &__texts {
-    color: $white-text-color;
+    color: $white-primary-color;
+    font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.76;
-    letter-spacing: 4%;
+    letter-spacing: 0.04em;
     text-align: center;
     margin: 0;
   }
   &__read-more-btn {
     color: #000;
+    font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 18px;
@@ -53,9 +66,56 @@ $white-text-color: #fcfcfc;
     width: 164px;
     height: 42px;
     margin-top: 24px;
+    cursor: pointer;
     &--svg {
+      position: relative;
+      top: 4px;
+      left: 4px;
       width: 14px;
       height: 14px;
     }
+  }
+}
+.read-more-modal {
+  position: relative;
+  margin: auto;
+  background: $white-primary-color;
+  border: 2px solid $yellow-background-color;
+  border-radius: 10px;
+  width: 280px;
+  height: 459px;
+  cursor: auto;
+
+  &__close-button {
+    border: none;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    position: relative;
+    top: 2%;
+    left: 84%;
+    cursor: pointer;
+  }
+  &__tittle {
+    width: max-content;
+    font-family: 'Seymour One', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 0 auto 20px;
+  }
+  &__video-frame {
+    margin: 0 auto;
+    width: 80%;
+  }
+  &__video {
+    width: 100%;
+    border-radius: 10px;
+  }
+  &__text {
+    font-family: 'Montserrat', sans-serif;
+    margin: 20px auto 0;
+    padding-bottom: 28px;
+    width: 80%;
   }
 }
