--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,7 +5,7 @@
     <h3 class="products__name">ice cream</h3>
     <p class="products__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href=""></use></svg>
+      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
   </div>
   <div class="ice-coffee">
@@ -15,7 +15,7 @@
       preservatives and flavor enhancers
     </p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href=""></use></svg>
+      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
   </div>
   <div class="milkshakes">
@@ -25,7 +25,7 @@
       sweets of your choice
     </p>
     <button class="products__button" type="button" data-modal-open>
-      <svg width="40" height="16"><use href=""></use></svg>
+      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
   </div>
 </section>
@@ -35,7 +35,7 @@
   <div class="modal">
     <button class="modal__close" data-modal-close>
       <svg class="close-icon" width="11.11" height="11.14">
-        <use href=""></use>
+        <use href="./images/icons-ice_cream.svg#icon-icon-close"></use>
       </svg>
     </button>
     <p class="modal-form__title">Chololate icecream</p>
