Init mobile header and hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,11 @@
 <header class="header">
-  <div class="header__logo-box">
-    <svg class="header__logo">
-      <use href="./images/icons-ice_cream.svg#icon-main-logo"></use>
-    </svg>
-    <span class="header__logo-span">ce</span>
-  </div>
+  <svg class="header__logo">
+    <use href="./images/icons-ice_cream.svg#icon-Logo"></use>
+  </svg>
+
   <button class="header__menu">
     <svg class="header__icon">
-      <use href="./images/icons-ice_cream.svg#icon-menu"></use>
+      <use href="./images/icons-ice_cream.svg#icon-eva_menu-fill"></use>
     </svg>
   </button>
 </header>
