--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 
 @use './partials/advantages';
 
+@use './partials/hero';
+
 @import './mixins';
 @import './partials/header';
 @import './products';
