zmiana sciezki obrazów

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -41,7 +41,7 @@
     <p class="modal-form__title">Chololate icecream</p>
     <form action="javascript:void(0);" method="POST"></form>
     <form class="modal__form">
-      <img class="modal__img" alt="gałka lodów czekoladowych" src="../images/products/products-modal_mobile 1x.jpg"/>
+      <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile 1x.jpg"/>
           <input class="modal__input" type="text" name="name" id="user-name" placeholder="Name"required />
           <input class="modal__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
         <textarea
