--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,15 +5,6 @@
 
 // Style dla pliku z przykładem HTML fragmentu
 
-
-
-
-
-
-
-
-
-
 @use './partials/advantages';
 @use './partials/main-styles';
 @use './partials/vars';
@@ -24,8 +15,4 @@
 @import './products';
 @import './partials/about';
 
-
-
-
-@import './example';
-
+//@import './example';
