--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,9 +10,10 @@
 @use './partials/vars';
 
 @import './mixins';
+
 @import './partials/header';
 
-@import './products';
+@import './partials/products';
 @import './partials/about';
 
 //@import './example';
