--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,17 +5,15 @@
 
 // Style dla pliku z przykładem HTML fragmentu
 
-@use './products';
-@import './mixins';
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-@use './partials/header';
-=======
-@import './partials/header';
-@import './partials/products';
+@use './partials/advantages';
+@use './partials/main-styles';
+@use './partials/vars';
 
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-@import './example';
-@import './';
+@import './mixins';
+
+@import './partials/header';
+
+@import './partials/products';
+@import './partials/about';
+
+//@import './example';
