--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -39,9 +39,20 @@
       </svg>
     </button>
     <p class="modal-form__title">Chololate icecream</p>
+    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile 1x.jpg"/>
+    <ul>
+      <li>320 kcal
+      </li>
+      <li>
+        4g Prote...
+      </li>
+      <li>8,2g Fats</li>
+      <li>40,4g Carbs</li>
+    </ul>
+    <p>Ingredients</p>
+    
     <form action="javascript:void(0);" method="POST"></form>
     <form class="modal__form">
-      <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile 1x.jpg"/>
           <input class="modal__input" type="text" name="name" id="user-name" placeholder="Name"required />
           <input class="modal__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
         <textarea
