Init header styles in tablet view

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,18 @@
     <use href="./images/icons-ice_cream.svg#icon-Logo"></use>
   </svg>
 
-  <button class="header__menu">
-    <svg class="header__icon">
-      <use href="./images/icons-ice_cream.svg#icon-eva_menu-fill"></use>
-    </svg>
-  </button>
+  <div class="header__box">
+    <button class="header__menu">
+      <svg class="header__icon">
+        <use href="./images/icons-ice_cream.svg#icon-eva_menu-fill"></use>
+      </svg>
+    </button>
+
+    <button class="buy-now">
+      <span class="buy-now__text">Buy now</span>
+      <svg class="buy-now__svg">
+        <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+      </svg>
+    </button>
+  </div>
 </header>
