--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,1 +1,56 @@
-//przestrzeń na opinie
+
+
+<div class="review">
+  <!-- Additional required wrapper -->
+  <div class="review__wrapper">
+    <!-- Slides -->
+
+    <ul class="review__list">
+      <li class="review__slide">
+        <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
+        <div class="review__opinion"
+          >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
+          addition, you have beautiful serving, cozy atmosphere and polite staff</div
+        >
+        <div class="review__name">pani skądś</div>
+      </li>
+
+      <li class="review__slide">
+        <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
+        <div class="review__opinion"
+          >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
+          addition, you have beautiful serving, cozy atmosphere and polite staff</div
+        >
+        <div class="review__name">pani skądś</div>
+      </li>
+
+      <li class="review__slide">
+        <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
+        <div class="review__opinion"
+          >Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!
+
+          </div
+        >
+        <div class="review__name">Bryan, New-York</div>
+      </li>
+
+
+
+
+    </ul>
+
+    </div>
+    ...
+  </div>
+  <!-- If we need pagination -->
+  <div class="review__pagination Swiper"></div>
+
+ 
+
+  <!-- If we need navigation buttons -->
+  <!--<div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>-->
+
+  <!-- If we need scrollbar -->
+  <!--<div class="swiper-scrollbar"></div>-->
+</div>
