--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,5 @@
 <section class="products">
+  <div class="container">
   <p class="products__label" id="100% natural">100% natural</p>
   <h2 class="products__title">products</h2>
   <div class="ice-cream">
@@ -27,6 +28,7 @@
     <button class="products__button" type="button" data-modal-open>
       <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
+  </div>
   </div>
 </section>
 
