--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -41,19 +41,19 @@
 }
 
 .ice-cream::before {
-  content: url();
+  content: '';
   width: 200px;
   height: 200px;
   border-radius: 100px;
 }
 .ice-coffee::before {
-  content: url(.);
+  content: '';
   width: 200px;
   height: 200px;
   border-radius: 100px;
 }
 .milkshakes::before {
-  content: url();
+  content: '';
   width: 200px;
   height: 200px;
   border-radius: 100px;
