changing picture adress

--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,5 +1,5 @@
 .products {
-  background-image: url(../images/Backgroud_mobile\ 1x.jpg);
+  background-image: url(../images/Backgroud_mobile@1x.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,21 +40,9 @@
   }
 }
 
-.ice-cream::before {
-  content: '';
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-}
-.ice-coffee::before {
-  content: '';
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-}
-.milkshakes::before {
-  content: '';
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-}
+//.ice-cream__title::before {
+//content: url(../images/products/ice-cream_480\ 1x.jpg);
+//width: 200px;
+//height: 200px;
+//border-radius: 100px;
+//}
