one more address

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -41,7 +41,7 @@
       </svg>
     </button>
     <p class="modal__title">Chololate icecream</p>
-    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile 1x.jpg"/>
+    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile@1x.jpg"/>
     <ul class="value">
       <li class="value__item">320 kcal
       </li>
@@ -64,16 +64,13 @@
     </ul>
     
     <form action="javascript:void(0);" method="POST"></form>
-<<<<<<< Updated upstream
-    <form class="modal__form form">
-          <input class="form__input" type="text" name="name" id="user-name" placeholder="Name"required />
-          <input class="form__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
-=======
+
+
     <form class="modal__form">
       <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile@1x.jpg"/>
           <input class="modal__input" type="text" name="name" id="user-name" placeholder="Name"required />
           <input class="modal__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
->>>>>>> Stashed changes
+
         <textarea
           class="form__feedback"
           name="feedback"
