added some html and css structure

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -41,21 +41,18 @@
       </svg>
     </button>
     <p class="modal__title">Chololate icecream</p>
-    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile 1x.jpg"/>
+    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile@1x.jpg"/>
     <ul class="value">
-      <li class="value__item">320 kcal
+      <li class="value__item">kcal <div class="value__roundborder"> <span class="value__number">320</span> </div>
       </li>
-      <li class="value__item">
-        4g Prote...
+      <li class="value__item">Prote...
       </li>
-      <li class="value__item">8,2g Fats</li>
-      <li class="value__item">40,4g Carbs</li>
+      <li class="value__item">Fats</li>
+      <li class="value__item">Carbs</li>
     </ul>
     <p class="ingredients">Ingredients</p>
     <ul class="ingredients__list">
-      <li class="ingredients__item">
-        Milk 100ml
-      </li>
+      <li class="ingredients__item">Milk 100ml</li>
       <li class="ingredients__item">Belgian chocolate 20g</li>
       <li class="ingredients__item">Cream 150ml</li>
       <li class="ingredients__item">Cocoa powder 30g</li>
