--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,45 +1,60 @@
 .products {
-  background-image: url(../images/Backgroud_mobile\ 1x.jpg);
+  background-image: url(../images/Backgroud_mobile@1x.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
   margin: 0 auto;
-  align-items: center;
 
   &__label {
     color: #131313;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.2;
     text-transform: uppercase;
+    text-align: center;
   }
   &__title {
     color: #131313;
-    font-family: Seymour One;
+    font-family: 'Seymour One', sans-serif;
     font-weight: 400;
     font-size: 30px;
     line-height: 1.26;
     text-transform: uppercase;
+    text-align: center;
   }
   &__name {
     color: #131313;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.22;
     text-transform: uppercase;
+    text-align: center;
   }
   &__text {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.77;
     text-align: center;
   }
 }
-
+.ice-cream {
+  width: 280px;
+  height: 420px;
+  border-radius: 24px;
+  background-color: #aec6a5;
+}
+.ice-coffee {
+  @extend .ice-cream;
+  background-color: #efd478;
+}
+.milkshakes {
+  @extend .ice-cream;
+  background-color: #d6936d;
+}
 .ice-cream::before {
   content: '';
   width: 200px;
@@ -57,4 +72,85 @@
   width: 200px;
   height: 200px;
   border-radius: 100px;
+}
+.modal {
+  position: relative;
+  margin: auto;
+  background-color: #fcfcfc;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+  width: 280px;
+  height: 968px;
+  &__close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20px;
+    width: 20px;
+    top: 12px;
+    right: 12px;
+    background-color: #fcfcfc;
+    border: none;
+    position: absolute;
+  }
+  &__button {
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.22;
+    width: 132px;
+    height: 42px;
+    font-size: 14px;
+    background-color: #f8d24e;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+}
+.value {
+  &__item {
+    width: 53px;
+    height: 72px;
+    border-radius: 40px;
+    border: 2px solid #9cbe8f;
+  }
+  &__roundborder {
+    width: 43px;
+    height: 43px;
+    border-radius: 50px;
+    background-color: #9cbe8f;
+    border: 2px solid #9cbe8f;
+    display: flex;
+    justify-content: flex-start;
+  }
+  &__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.ingredients {
+  &__list {
+    flex-direction: column;
+  }
+  &__item {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.form {
+  &__input {
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    width: 240px;
+    height: 42px;
+    font-size: 14px;
+    background-color: #f8d24e;
+    border: 1px solid #84a178;
+    border-radius: 10px;
+  }
+}
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  scale: 0;
 }
