--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -12,16 +12,16 @@
           >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
           addition, you have beautiful serving, cozy atmosphere and polite staff</div
         >
-        <div class="review__name">pani skądś</div>
+        <div class="review__name">Emily, Los Angeles</div>
       </li>
 
       <li class="review__slide">
         <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
         <div class="review__opinion"
-          >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-          addition, you have beautiful serving, cozy atmosphere and polite staff</div
+          >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent service - always served politely and quickly!
+          </div
         >
-        <div class="review__name">pani skądś</div>
+        <div class="review__name">Diana, Chicago</div>
       </li>
 
       <li class="review__slide">
