--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -43,7 +43,7 @@
     ...
   </div>
   <!-- If we need pagination -->
-  <div class="review__pagination Swiper"></div>
+  <div class="review__pagination"></div>
 
  
 
