--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -14,6 +14,7 @@
     line-height: 1.2;
     text-transform: uppercase;
     text-align: center;
+    padding-top: 60px;
   }
   &__title {
     color: #131313;
@@ -23,6 +24,7 @@
     line-height: 1.26;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 12px;
   }
   &__name {
     color: #131313;
@@ -39,6 +41,7 @@
     font-size: 14px;
     line-height: 1.77;
     text-align: center;
+    margin-top: 40px;
   }
 }
 .ice-cream {
@@ -46,6 +49,7 @@
   height: 420px;
   border-radius: 24px;
   background-color: #aec6a5;
+  margin: 0 auto;
 }
 .ice-coffee {
   @extend .ice-cream;
