--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -18,6 +18,7 @@
     margin: 0 auto;
 
     border-radius: 50%;
+    margin-bottom: 32px;
   }
 
   &__opinion {
@@ -31,5 +32,21 @@
     padding-right: 39px;
     padding-left: 39px;
     margin: auto;
+    color: #fcfcfc;
+    text-align: center;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+
+    letter-spacing: 0.04em;
+    line-height: 2.25em;
+    margin-bottom: 32px;
+  }
+
+  &__name {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Monsterrat', sans-serif;
+    font-weight: 500;
   }
 }
