--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -6,10 +6,19 @@
 
 .review {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-
+  padding: 0;
+  justify-content: center;
   &__list {
     list-style: none;
+  }
+
+  &__slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
   }
 
   &__pic {
@@ -22,16 +31,17 @@
   }
 
   &__opinion {
+    display: flex;
+    justify-content: center;
     border-radius: 10px;
     margin-top: 32px;
-
     background: #84a178;
-    margin: 20px auto 0;
+
     padding-bottom: 35px;
     padding-top: 35px;
     padding-right: 39px;
     padding-left: 39px;
-    margin: auto;
+
     color: #fcfcfc;
     text-align: center;
     font-size: 12px;
@@ -41,6 +51,8 @@
     letter-spacing: 0.04em;
     line-height: 2.25em;
     margin-bottom: 32px;
+    margin: 0 auto;
+    max-width: 280px;
   }
 
   &__name {
@@ -48,5 +60,10 @@
     font-size: 20px;
     font-family: 'Monsterrat', sans-serif;
     font-weight: 500;
+    padding-top: 32px;
+  }
+
+  &__pagination {
+    height: 20px;
   }
 }
