--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -5,19 +5,23 @@
 //}
 
 .review {
-  //display: flex;
-  //flex-direction: column;
-  //justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 0;
   justify-content: center;
+
   &__list {
     list-style: none;
+    padding: 0;
+    justify-content: center;
+    width: 280px;
   }
 
   &__slide {
-    //display: flex;
-    //flex-direction: column;
-    //justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0;
   }
 
@@ -33,7 +37,7 @@
   }
 
   &__opinion {
-    //display: flex;
+    display: flex;
     justify-content: center;
     border-radius: 10px;
     margin-top: 32px;
@@ -64,9 +68,5 @@
     font-weight: 500;
     padding-top: 32px;
     max-width: 280px;
-  }
-
-  &__pagination {
-    height: 20px;
   }
 }
