--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -1,40 +1,88 @@
-$green-background-color: #84a178;
-$yellow-background-color: #f8d24e;
-$white-primary-color: #fcfcfc;
+@import './vars';
 
+.container {
+  max-width: 380px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+  @include tablet {
+    max-width: 768px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
+}
 .about {
-  background-color: $green-background-color;
+  background-color: $firstBrandColor;
 
   &__header-container {
     width: 210px;
-    padding-top: 60px;
+    padding: 62px 0;
     margin: auto;
+    @include tablet {
+      width: max-content;
+    }
+    @include desktop {
+      padding-bottom: 102px;
+    }
   }
   &__label {
-    color: $white-primary-color;
+    color: $textWhite;
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+    margin: 0 0 12px;
+    @include tablet {
+      font-size: 22px;
+      letter-spacing: 0.04em;
+      font-weight: 900;
+    }
+    @include desktop {
+      font-size: 30px;
+    }
   }
   &__tittle {
-    color: $white-primary-color;
+    color: $textWhite;
     font-family: 'Seymour One', sans-serif;
     font-size: 30px;
     font-weight: 900;
     letter-spacing: 0.04em;
     text-align: center;
     text-transform: uppercase;
+    margin: 0;
+    @include tablet {
+      font-size: 34px;
+      letter-spacing: 0.06em;
+    }
+    @include desktop {
+      font-size: 36px;
+    }
   }
-
+  &__content-flex-container {
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+      flex-direction: row;
+    }
+  }
   &__img-container {
     border-radius: 50%;
-    overflow: hidden;
     box-shadow: 0 -22px 0 5px #f8d24eb3, 0 -22px 0 5px #d9d9d9;
-    width: 85%;
-    height: 278px;
-    margin: 0 auto;
+
+    margin: 0 auto 40px;
+    & img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+    @include tablet {
+      max-width: 50%;
+    }
+    @include desktop {
+      max-width: 40%;
+    }
   }
 
   &__txt-and-btn-container {
@@ -43,16 +91,32 @@ $white-primary-color: #fcfcfc;
     align-items: center;
     width: 220px;
     margin: auto;
+    @include tablet {
+      align-items: flex-start;
+      width: 336px;
+      margin-left: 38px;
+    }
+    @include desktop {
+      width: 463px;
+    }
   }
   &__texts {
-    color: $white-primary-color;
+    color: $textWhite;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
-    font-weight: 400;
     line-height: 1.76;
     letter-spacing: 0.04em;
     text-align: center;
-    margin: 0;
+    margin: 0 0 4px;
+    &:nth-child(3) {
+      margin: 0;
+    }
+    @include tablet {
+      text-align: left;
+    }
+    @include desktop {
+      font-size: 16px;
+    }
   }
   &__read-more-btn {
     color: #000;
@@ -60,7 +124,7 @@ $white-primary-color: #fcfcfc;
     font-size: 14px;
     font-weight: 700;
     line-height: 18px;
-    background-color: $yellow-background-color;
+    background-color: $secondaryBrandColor;
     border: none;
     border-radius: 10px;
     width: 164px;
@@ -73,19 +137,38 @@ $white-primary-color: #fcfcfc;
       left: 4px;
       width: 14px;
       height: 14px;
+      stroke: #000;
+    }
+    &:hover {
+      background-color: #0a8817;
+    }
+    &:focus,
+    &:focus .about__read-more-btn--svg {
+      background-color: #0a8817;
+      color: $textWhite;
+      stroke: $textWhite;
+    }
+    &:disabled {
+      background-color: #ababab;
+    }
+    @include tablet {
+      margin-top: 32px;
     }
   }
 }
 .read-more-modal {
   position: relative;
   margin: auto;
-  background: $white-primary-color;
-  border: 2px solid $yellow-background-color;
+  background: $textWhite;
+  border: 2px solid $secondaryBrandColor;
   border-radius: 10px;
   width: 280px;
   height: 459px;
   cursor: auto;
-
+  @include desktop {
+    width: 568px;
+    height: 449px;
+  }
   &__close-button {
     border: none;
     width: 30px;
@@ -103,19 +186,31 @@ $white-primary-color: #fcfcfc;
     font-weight: 700;
     line-height: 24px;
     margin: 0 auto 20px;
+    @include desktop {
+      font-size: 20px;
+      line-height: 28px;
+    }
   }
   &__video-frame {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+    @include desktop {
+      height: 205px;
+    }
   }
   &__video {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
   }
   &__text {
     font-family: 'Montserrat', sans-serif;
     margin: 20px auto 0;
+    font-size: 14px;
     padding-bottom: 28px;
     width: 80%;
+    @include desktop {
+      font-size: 16px;
+    }
   }
 }
