--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -34,8 +34,8 @@
         <button class="about__read-more-btn" type="button">
           Read more
           <svg class="about__read-more-btn--svg">
-            <line x1="0" y1="0" x2="5" y2="5.5" stroke="#2a2a2a" stroke-width="2" />
-            <line x1="0" y1="10" x2="5" y2="4.5" stroke="#2a2a2a" stroke-width="2" />
+            <line x1="0" y1="0" x2="5" y2="5.5" stroke-width="2" />
+            <line x1="0" y1="10" x2="5" y2="4.5" stroke-width="2" />
           </svg>
         </button>
       </div>
