--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -15,7 +15,7 @@
     list-style: none;
     padding: 0;
     justify-content: center;
-    width: 280px;
+    //width: 280px;
   }
 
   &__slide {
@@ -38,6 +38,7 @@
 
   &__opinion {
     display: flex;
+
     justify-content: center;
     border-radius: 10px;
     margin-top: 32px;
@@ -57,8 +58,8 @@
     letter-spacing: 0.04em;
     line-height: 2.25em;
     margin-bottom: 32px;
-    margin: 0;
-    max-width: 280px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 
   &__name {
@@ -67,6 +68,5 @@
     font-family: 'Monsterrat', sans-serif;
     font-weight: 500;
     padding-top: 32px;
-    max-width: 280px;
   }
 }
